[add]KidProvider追加
